prometheus/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-service
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
  - name: client
    nodePort: 30300
    port: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  serviceName: grafana-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana-core
        image: grafana/grafana:5.2.3
        imagePullPolicy: IfNotPresent
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
          name: client
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          # initialDelaySeconds: 30
          # timeoutSeconds: 1
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana
      securityContext:
        runAsUser: 472
        runAsGroup: 1200
        fsGroup: 1200
  volumeClaimTemplates:
  - metadata:
      name: grafana-persistent-storage
      namespace: monitoring
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 50Gi
