prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-prometheus
  namespace: rook
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: rook-prometheus
