prometheus/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
spec:
  rules:
  - host: grafana.danch.home
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
